# gs-pdf

./: .gitignore  README.md  gs-pdf  pyproject.toml
.omo/run-continuation/: ses_0d1dc7ea7ffe0l87CNmBzK15z6.json  ses_0d1f32405ffepRkauAZD7MNz96.json
docs/superpowers/plans/: 2026-07-04-gs-pdf-cli.md
docs/superpowers/specs/: 2026-07-04-gs-pdf-cli-design.md
src/gs_pdf/: __init__.py  __main__.py  config.py  engine.py  main.py  util.py
src/gs_pdf/commands/: __init__.py  color.py  compress.py  config.py  config_.py  convert.py  decrypt.py  encrypt.py  extract.py  fonts.py  inspect.py  merge.py  pages.py  pdfa.py  raw.py  split.py
